--- a/src/app/modules/progress-jobs/progress-jobs.component.html
+++ b/src/app/modules/progress-jobs/progress-jobs.component.html
@@ -43,7 +43,7 @@
 
       <div class="modal-header " style="border-bottom: none;     padding: 20px 25px 12px 25px">
         <p class="rejecttxt">{{selectedhire.jobTitle}}</p>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="margin-right: 10px;"></button>
       </div>
       <div class="modal-body" style="padding: 20px 100px 12px 100px">
 
