--- a/src/app/modules/freelancer/freelancer.component.scss
+++ b/src/app/modules/freelancer/freelancer.component.scss
@@ -9,12 +9,15 @@
 }
 
 .jobcontents:hover,
-.kkjbtxtline1:hover,
+
 .kkjbtxtline3:hover {
     background-color: #F3F3F3;
     color: #000000;
 }
-
+.kkjbtxtline1:hover{
+    color: #A426D1;
+    text-decoration: underline;
+}
 .kkfrnavbar1 {
     align-items: baseline;
     justify-content: space-around;
@@ -31,7 +34,7 @@
     border: 0;
     color: #0F0F0F;
     font-family: 'League Spartan', sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -44,7 +47,7 @@
 
 .search {
     border-radius: 8px;
-    border: 2px solid #C1C1C1;
+    border: 1px solid #C1C1C1;
     width: 96%;
     height: 54px;
     flex-shrink: 0;
@@ -101,7 +104,7 @@
 
 .kkjobfutxt {
     margin-top: 50px;
-    font-size: 35px;
+    font-size: 30px;
     font-weight: 500;
     font-family: 'League Spartan', sans-serif;
 }
@@ -141,9 +144,10 @@
 
 .kkjbtxtline1 {
     margin-top: 25px;
-    font-size: 25px;
+    font-size: 20px;
     line-height: 36px;
     font-weight: 500;
+    color: #535353;
     font-family: 'League Spartan', sans-serif;
 }
 
@@ -162,18 +166,18 @@
 .kkjbtxtline2 {
     color: #535353;
     font-family: "League Spartan", sans-serif;
-    font-size: 20px;
+    font-size: 17px;
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
 }
 
 .kkjbtxtline3 {
-    color: #535353;
+    color: #000000;
     font-family: "League Spartan", sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     font-style: normal;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 32px;
     letter-spacing: 0.5px;
 }
@@ -183,7 +187,7 @@
     margin-left: 170px;
     color: #535353;
     font-family: "League Spartan", sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 36px;
@@ -194,7 +198,7 @@
     margin-top: 10px;
     color: #535353;
     font-family: "League Spartan", sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 36px;
@@ -205,7 +209,7 @@
     margin-left: 19px;
     height: auto;
     border-radius: 16px;
-    border: 2px solid #C1C1C1;
+    border: 1px solid #C1C1C1;
     width: 264px;
     box-shadow: 10px 10px 21px -19px #A426D1;
 }
@@ -240,7 +244,7 @@
     margin-top: 18px;
     font-family: "League Spartan", sans-serif;
     color: #000000;
-    font-size: 24px;
+    font-size: 20px;
     font-style: normal;
     text-align: center;
     font-weight: 600;
@@ -249,10 +253,9 @@
 }
 
 .kkfrname2 {
-    margin-top: 18px;
     font-family: "League Spartan", sans-serif;
     color: #000000;
-    font-size: 20px;
+    font-size: 18px;
     font-style: normal;
     text-align: center;
     font-weight: 600;
@@ -262,23 +265,24 @@
 .kkfrname1 {
     color: #787878;
     font-family: League Spartan;
-    font-size: 24px;
+    font-size: 18px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 27px;
     text-align: center;
+    position: relative;
+    margin-top: -10px;
 }
 
 .kkcplstus {
     color: #787878;
-
     font-family: League Spartan;
-    font-size: 18px;
+    font-size: 17px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 27px;
     text-align: left;
-    padding-left: 19px
+    padding-left: 26px;
 }
 
 .progress {
@@ -318,9 +322,9 @@
 .kkindbx2 {
     color: #787878;
     font-family: League Spartan;
-    font-size: 17px;
+    font-size: 16px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     text-align: left;
     cursor: pointer;
 }
@@ -386,7 +390,7 @@
     height: 95px;
     margin-top: 10px;
     width: 38%;
-    height: 95px;
+    height: 88px;
     box-shadow: 3px 7px 15px -2px #A426D1;
 }
 
@@ -501,7 +505,7 @@
 .viewapply {
     display: inline-flex;
     padding: 9px 4px;
-    width: 124px;
+    width: 103px;
     margin-top: 31px;
     border: 0px;
     float: right;
@@ -512,7 +516,7 @@
     background: #A426D1;
     color: #FFF;
     font-family: "League Spartan";
-    font-size: 19px;
+    font-size: 16px;
     font-style: normal;
     line-height: normal;
 }
@@ -523,10 +527,10 @@
     float: right;
     color: #53535378;
     font-family: "League Spartan", sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
     line-height: 36px;
-    font-weight: 400;
+    font-weight: 500;
 }
 
 
@@ -761,9 +765,9 @@
 .k1 {
     color: #A426D1;
     font-family: League Spartan;
-    font-size: 18px;
+    font-size: 16px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     margin-top: -32px;
 }
 
