Push Notification 60% completed

--- a/src/app/modules/freelancer/freelancer.component.html
+++ b/src/app/modules/freelancer/freelancer.component.html
@@ -146,4 +146,6 @@
  </div>
 
 
- <ng-toast [style]="{ width: '300px', paddingTop: '30px' }"></ng-toast>
+ <div>
+  <ng-toast [style]="{ width: '300px', paddingTop: '30px' }"></ng-toast>
+</div>
