--- a/src/app/modules/freelancernav/freelancernav.component.scss
+++ b/src/app/modules/freelancernav/freelancernav.component.scss
@@ -178,8 +178,12 @@
            }
        
            .prset { 
-            position: absolute;
-    right: 98px;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            z-index: 100;
+            left: 0px;
+            top: 0px;
            }
            .viewapply { 
                display: inline-flex;
@@ -399,8 +403,12 @@
            }
        
            .prset { 
-            position: absolute;
-    right: 98px;
+            position: fixed;
+             width: 100%;
+            height: 100%;
+            z-index: 100;
+            left: 0px;
+            top:0px;
            }
            .viewapply { 
                display: inline-flex;
@@ -439,9 +447,8 @@
 
 
     .kkcrd{
-        margin-top: 62px;
         /* margin-left: 100px; */
-        width: 146%;
+        width: 235px;
         height: auto;
         z-index: 111;
         flex-shrink: 0;
@@ -460,9 +467,7 @@
     
       }
     
-      .kkcrd12{
-    display: flex;
-      }
+     
     
     .kkprname{
         color: #000;
@@ -513,3 +518,28 @@
     }
 
     
+
+
+    @media only screen and (min-width:1601px){
+        .kkcrd12{
+            position: absolute;
+            right: 240px;
+            top:150px;
+              }
+    }
+
+    @media only screen and (min-width:1501px) and (max-width:1600px) {
+        .kkcrd12{
+            position: absolute;
+            right: 150px;
+            top:150px;
+              }
+    }
+
+    @media only screen and (min-width:1001px) and (max-width:1500px) {
+        .kkcrd12{
+            position: absolute;
+            right: 60px;
+            top:150px;
+              }
+    }
