commented the mdview in home component

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -398,7 +398,7 @@
     </div>
   </div>
 </div>
-<div class="mdview">
+<!-- <div class="mdview">
   <div class="rrmdalign1">
     <div class="rrcenter">
       <img src="./assets/pcimg.jpg" class="rrpubmobileimg1">
@@ -407,7 +407,4 @@
       <p class="">Please open in desktop</p>
     </div>
   </div>
-</div>
-
-
-
+</div> -->
