--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -207,9 +207,9 @@
 
 @media only screen and (min-width:998px) {
 
-  .mdview {
-    display: none;
-  }
+  // .mdview {
+  //   display: none;
+  // }
 
   .rrheaderalign {
     margin-top: 10px;
@@ -722,16 +722,16 @@
 
 
 @media only screen and (min-width:601px) and (max-width:997px) {
-  .dtview {
-    display: none;
-  }
+  // .dtview {
+  //   display: none;
+  // }
 }
 
 
 @media only screen and (max-width:600px) {
-  .dtview {
-    display: none;
-  }
+  // .dtview {
+  //   display: none;
+  // }
 }
 
 
